src/Components/Portfolio/Portfolio.css
.portfolioContainer {
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-bottom: 100px;
}

.workContainer {
  display: inline-block;
  width: 85vw;
  margin: 0 auto;
}

@media(min-width: 1600px) {
  .workContainer {
    width: 1600px;
  }
}

@media(max-width: 1600px) {
  .workContainer {
    width: 1050px;
  }
}

@media(max-width: 1000px) {
  .workContainer {
    width: 525px;
  }
}

@media(max-width: 700px) {
  .workContainer {
    width: 95vw;
    margin: 0 auto;
  }
}

.side-lines--single {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100vw;
  text-align: center;
}

.side-lines--single:before {
  margin-right: 1rem;
}

.side-lines--single:after {
  margin-left: 1rem;
}

.side-lines--single:before, .side-lines--single:after {
  content: '';
  flex: 1;
  width: 100%;
  height: 5px;
  background-image: linear-gradient(120deg, #30cfd0 0%, #330867 50%);
  animation: gradientPortfolio 10s ease infinite;
  background-size: 300%;
}

@keyframes gradientPortfolio {
    0%{background-position:0% 50%}
    50%{background-position:300% 300%}
    100%{background-position:0% 50%}
}

